--- a/shop-admin-ui/src/main/resources/application.properties
+++ b/shop-admin-ui/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+server.servlet.context-path=/spring_shop
 
+##Включение HiddenHttpMethodFilter который добавляет поддержку HTTP-методов REST API
+spring.mvc.hiddenmethod.filter.enabled=true
+
+##Отлючение liquibase при запуске
+spring.liquibase.enabled=false
+
+##Подключение к БД
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_shop?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=actc002f
+
+##Вывод запросов в читабельном виде
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+##Для вывода информации конфигурирования spring boot
+#debug=true
+#logging.level.root=DEBUG
+#
+##Для вывода логов spring security
+##logging.level.org.springframework.security=DEBUG
