Доработка логики авторизации (Подлючение ролей из БД)

--- a/shop-admin-ui/src/main/resources/application.properties
+++ b/shop-admin-ui/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 ##Для вывода информации конфигурирования spring boot
-#debug=true
-#logging.level.root=DEBUG
+debug=true
+logging.level.root=DEBUG
 #
 ##Для вывода логов spring security
 ##logging.level.org.springframework.security=DEBUG
