--- a/shop-database/pom.xml
+++ b/shop-database/pom.xml
@@ -41,7 +41,7 @@
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>3.6.3</version>
+                <version>${liquibase.version}</version>
                 <configuration>
                     <propertyFile>${project.basedir}/src/main/resources/liquibase-maven-plugin.properties</propertyFile>
                 </configuration>
