Добавление возможности сохранения картинок на диске (аналогично коду занятия)

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
     <modules>
         <module>shop-database</module>
+        <module>shop-pictures-service</module>
         <module>shop-admin-ui</module>
         <module>shop-ui</module>
     </modules>
