--- a/shop-admin-ui/src/main/resources/application.properties
+++ b/shop-admin-ui/src/main/resources/application.properties
@@ -20,9 +20,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 ##Проверка параметров сущности полям таблицы
 spring.jpa.hibernate.ddl-auto=validate
 
+##Выбор пути для сохранения изобржений
+picture.storage.type=files
+picture.storage.path=C:/Users/Brolo/Documents/test
+
 ##Для вывода информации конфигурирования spring boot
 debug=true
 logging.level.root=DEBUG
 #
 ##Для вывода логов spring security
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
