Добавление корзины. Обработка по добюавлению товаров в корзину. Удаление товара из корзины

--- a/shop-ui/src/main/resources/application.properties
+++ b/shop-ui/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.servlet.context-path=/spring_shop
 
+##Подлючение запросов REST API HiddenHttpMethodFilter
+spring.mvc.hiddenmethod.filter.enabled=true
+
 ##Отлючение liquibase при запуске
 spring.liquibase.enabled=false
 
