--- a/shop-ui/src/main/resources/application.properties
+++ b/shop-ui/src/main/resources/application.properties
@@ -23,6 +23,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 picture.storage.type=files
 picture.storage.path = @project@/../pictures
 
+#Подключенеи Redis
+spring.redis.host=localhost
+spring.redis.password=
+spring.redis.port=6379
+
 ##Для вывода информации конфигурирования spring boot
 debug=true
 logging.level.root=DEBUG
