Создание серсива получения картинок. Перевод админики и сайта магазина на использование данного сервиса.

--- a/pom.xml
+++ b/pom.xml
@@ -15,17 +15,34 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+    </properties>
+
     <modules>
         <module>shop-database</module>
         <module>shop-pictures-service</module>
         <module>shop-admin-ui</module>
         <module>shop-ui</module>
+        <module>shop-picture-service-app</module>
+        <module>spring-cloud-config</module>
+        <module>spring-eureka</module>
+        <module>spring-gateway</module>
     </modules>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
