--- a/shop-admin-ui/src/main/resources/application.properties
+++ b/shop-admin-ui/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.servlet.context-path=/spring_shop
+#server.servlet.context-path=/spring_shop
+server.port=8083
 
 ##Подлючение запросов REST API HiddenHttpMethodFilter
 spring.mvc.hiddenmethod.filter.enabled=true
@@ -24,9 +25,14 @@ spring.jpa.hibernate.ddl-auto=validate
 picture.storage.type=files
 picture.storage.path = @project@/../pictures
 
+#Путь к Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#Не регистрируемся в Eureka
+eureka.client.register-with-eureka=false
+
 ##Логик spring boot
-debug=true
-logging.level.root=DEBUG
+#debug=true
+#logging.level.root=DEBUG
 #
 ##Логи блока spring security
 #logging.level.org.springframework.security=DEBUG
