--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>spring-cloud-config</module>
         <module>spring-eureka</module>
         <module>spring-gateway</module>
+        <module>spring-integration-file</module>
     </modules>
 
     <dependencyManagement>
