Написание теста по ProductService

--- a/shop-ui/src/main/resources/application.properties
+++ b/shop-ui/src/main/resources/application.properties
@@ -3,8 +3,9 @@
 ##Подлючение запросов REST API HiddenHttpMethodFilter
 spring.mvc.hiddenmethod.filter.enabled=true
 
-##Отлючение liquibase при запуске
-spring.liquibase.enabled=false
+##Подключение liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 ##Подключение к БД
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_shop?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
@@ -17,7 +18,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 ##Проверка параметров сущности полям таблицы
-#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=validate
 
 ##Выбор пути для сохранения изобржений
 picture.storage.type=files
