--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>spring-eureka</module>
         <module>spring-gateway</module>
         <module>spring-integration-file</module>
+        <module>shop-admin-ui-test</module>
     </modules>
 
     <dependencyManagement>
